<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">MyWeather</string>
    <string name="unknown_town" translatable="false">Unknown town</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">Name</string>
    <string name="nav_header_subtitle">LastName</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_list_city">Cities</string>
    <string name="menu_sensors">Sensors</string>
    <string name="menu_about">About</string>
    <string name="menu_send">Send feedback</string>
    <string name="communicate">Communicate</string>

    <string name="title">Weather</string>
    <string name="town">Town</string>
    <string name="show_humidity">Show humidity</string>
    <string name="show_wind_speed">Show wind speed</string>
    <string name="show_pressure">Show pressure</string>
    <string name="button_text">Send request</string>

    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind speed</string>
    <string name="pressure">Pressure</string>

    <string name="error_can_not_be_empty">Can\'t be empty</string>

    <string name="temperature_value">%.1f \u2103</string>
    <string name="humidity_value">%d%%</string>
    <string name="wind_speed_value">%.1f m/s</string>
    <string name="pressure_value">%.1f mmHg</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="day_after_tomorrow">Day after tomorrow</string>

    <string-array name="town_list">
        <item>Krasnodar</item>
        <item>Moscow</item>
        <item>Omsk</item>
    </string-array>

    <string name="about_text">Developed by HomeDev!</string>
    <string name="confirm_text">Show weather for the city %s?</string>
    <string name="yes">Yes</string>

    <string name="place_not_found">Data not found</string>

    <string name="message">Message</string>
    <string name="btn_send">Send</string>
    <string name="message_success_send">Message send</string>

    <string name="temperature_no_isset">No temperature sensor</string>
    <string name="humidity_no_isset">No humidity sensor</string>
</resources>
