<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_sensors"
            android:icon="@drawable/ic_adjust_black_24dp"
            android:title="@string/menu_sensors" />
    </group>
    <item android:title="@string/communicate">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_share_black_24dp"
                    android:title="@string/menu_send" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_info_black_24dp"
                    android:title="@string/menu_about" />
            </group>
        </menu>
    </item>
</menu>
